--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -115,6 +115,7 @@ light mint:
     order: 1;
     a {
       margin-bottom: 1px;
+      box-sizing: border-box;
     }
   }
   // .mobile {
